@@ -47,6 +47,18 @@ factor <- function(x = character(), levels, labels = levels,
     f
 }
 
+
+## Also used for methods::validObject(<factor>) :
+.valid.factor <- function(object) {
+    levs <- levels(object)
+    if (!is.character(levs))
+        return("factor levels must be \"character\"")
+    if (d <- anyDuplicated(levs))
+	return(sprintf("duplicated level [%d] in factor", d))
+    ## 'else'	ok :
+    TRUE
+}
+
 is.factor <- function(x) inherits(x, "factor")
 
 as.factor <- function(x) {
@@ -155,6 +167,8 @@ print.factor <- function (x, quote = FALSE, max.levels = NULL,
                       else lev, collapse = colsep),
             "\n", sep = "")
     }
+    if(!isTRUE(val <- .valid.factor(x)))
+	warning(val) # stop() in the future
     invisible(x)
 }
 
