@@ -1,6 +1,6 @@
 % File src/library/base/man/factor.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2013 R Core Team
+% Copyright 1995-2016 R Core Team
 % Distributed under GPL 2 or later
 
 \name{factor}
@@ -18,6 +18,7 @@
 \alias{Ops.ordered}
 \alias{Summary.ordered}
 \alias{addNA}
+\alias{.valid.factor}
 \concept{categorical variable}
 \concept{enumerated type}
 \concept{category}
@@ -53,9 +54,10 @@ addNA(x, ifany = FALSE)
     values taken by \code{\link{as.character}(x)}, sorted into
     increasing order \emph{of \code{x}}.  Note that this set can be
     specified as smaller than \code{sort(unique(x))}.}
-  \item{labels}{\emph{either} an optional character vector of labels for the
-    levels (in the same order as \code{levels} after removing those in
-    \code{exclude}), \emph{or} a character string of length 1.}
+  \item{labels}{\emph{either} an optional character vector of (unique)
+    labels for the levels (in the same order as \code{levels} after
+    removing those in \code{exclude}), \emph{or} a character string of
+    length 1.}
   \item{exclude}{a vector of values to be excluded when forming the
     set of levels.  This should be of the same type as \code{x}, and
     will be coerced if necessary.}
@@ -85,13 +87,18 @@ addNA(x, ifany = FALSE)
   factor and \code{FALSE} otherwise.
 
   \code{as.factor} coerces its argument to a factor.
-  It is an abbreviated form of \code{factor}.
+  It is an abbreviated (sometimes faster) form of \code{factor}.
 
   \code{as.ordered(x)} returns \code{x} if this is ordered, and
   \code{ordered(x)} otherwise.
 
   \code{addNA} modifies a factor by turning \code{NA} into an extra
   level (so that \code{NA} values are counted in tables, for instance).
+
+  \code{.valid.factor(object)} checks the validity of a factor,
+  currently only \code{levels(object)}, and returns \code{TRUE} if it is
+  valid, otherwise a string describing the validity problem.  This
+  function is used for \code{\link{validObject}(<factor>)}.
 }
 \details{
   The type of the vector \code{x} is not restricted; it only must have
@@ -115,11 +122,12 @@ addNA(x, ifany = FALSE)
   which case the levels are that character string with a sequence
   number appended.
 
-  \code{factor(x, exclude = NULL)} applied to a factor is a no-operation
-  unless there are unused levels: in that case, a factor with the
-  reduced level set is returned.  If \code{exclude} is used it should
-  also be a factor with the same level set as \code{x} or a set of codes
-  for the levels to be excluded.
+  \code{factor(x, exclude = NULL)} applied to a factor without
+  \code{\link{NA}}s is a no-operation unless there are unused levels: in
+  that case, a factor with the reduced level set is returned.  If
+  \code{exclude} is used it should either be a factor with the same
+  level set as \code{x} or a set of codes for the levels to be
+  excluded.
 
   The codes of a factor may contain \code{\link{NA}}.  For a numeric
   \code{x}, set \code{exclude = NULL} to make \code{\link{NA}} an extra
