@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2016-05-20 r70654) -- "Unsuffered Consequences"
+R Under development (unstable) (2016-06-02 r70700) -- "Unsuffered Consequences"
 Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -115,8 +115,8 @@ List of 2
 +     "\n\t starting with 'is.' :\t  ",
 +     sum(grepl("^is\\.", ls.base[base.is.f])), "\n", sep = "")
 
-Number of base objects:		1318
-Number of functions in base:	1276
+Number of base objects:		1319
+Number of functions in base:	1277
 	 starting with 'is.' :	  50
 
 > ## 0.14  : 31
